korjattu muutama kirjoitusvirhe

--- a/1_viikko/index.html
+++ b/1_viikko/index.html
@@ -29,7 +29,7 @@
     Kun on talvi pakkaset ja järveen ei pääsee käyn täällä uimassa ja hieronnassa.</p>
     
     <p><a href="https://www.koiravalmennusmotivaatio.fi/">Koiravalmennus motivaatio</a>
-    Täällä treenaan viikkoittan tokoa Oona Tuorman opastuksella. <br>Lataa viikko treenisuunnitelman pohja alta PDF:nä</p>
+    Täällä treenaan viikkoittain tokoa Oona Tuorman opastuksella. <br>Lataa viikon treenisuunnitelman pohja alta PDF:nä</p>
 
     <a href="./doc/koira_treeni.pdf">Viikon_treenisuunnitelma.pdf</a>
 
