--- a/4_viikko/scss/index.html
+++ b/4_viikko/scss/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
   <title>Responsive sample page</title>
 </head>
+
 <body>
   <div id="container">
     <header>
@@ -25,84 +27,96 @@
           <div>
             <img src="./images/car1.jpg" alt="" />
             <h3>Article 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car2.jpg" alt="" />
             <h3>Article 2</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car3.jpg" alt="" />
             <h3>Article 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car4.jpg" alt="" />
             <h3>Article 4</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car5.jpg" alt="" />
             <h3>Article 5</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car6.jpg" alt="" />
             <h3>Article 6</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car7.jpg" alt="" />
             <h3>Article 7</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car8.jpg" alt="" />
             <h3>Article 8</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car9.jpg" alt="" />
             <h3>Article 9</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car10.jpg" alt="" />
             <h3>Article 10</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car11.jpg" alt="" />
             <h3>Article 11</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
         <article>
           <div>
             <img src="./images/car12.jpg" alt="" />
             <h3>Article 12</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta, nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur minus optio, amet natus eum dicta,
+              nobis ab aperiam fugit eaque libero repellendus velit magni tempore, quisquam debitis aut nemo maxime.</p>
           </div>
         </article>
       </section>
@@ -115,4 +129,5 @@
     </footer>
   </div>
 </body>
+
 </html>
